microservice-arch/yml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamehub-ingress
    
spec:
  rules:
    - host: gamehub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gamehub-service
                port:
                  number: 80
    - host: snake.gamehub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snake-service
                port:
                  number: 80
    - host: g2048.gamehub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: g2048-service
                port:
                  number: 80
